[package]
name = "ray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
chrono = "0.4.19"
float-ord = "0.3.2"
rand = "0.8.4"
stl_io = "0.6.0"
